DuPont DevSB/src/objects/DemandItemSchedule__c.object
<CustomObject>
    <description>Schedule for a given demand Item.  One record represents the demand for a given month</description>
    <fields>
        <fullName>BaseDate__c</fullName>
        <description>Date that indicates the month this record represents.  Typically beginning of month.</description>
        <inlineHelpText>Date that indicates the month this record represents. Typically beginning of month.</inlineHelpText>
        <label>Base Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DemandItem__c</fullName>
        <description>M/D to Demand Item</description>
        <label>Demand Item</label>
        <referenceTo>DemandItem__c</referenceTo>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Last_Snapshot_Date__c</fullName>
        <description>Field to capture the date when the last snapshot was taken</description>
        <inlineHelpText>Read Only field for when the last snapshot was taken</inlineHelpText>
        <label>Last Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Snapshot_Taken_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the name of the user executed the snapshot functionality</description>
        <inlineHelpText>Last Snapshot Taken By User</inlineHelpText>
        <label>Last Snapshot Taken By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demand_Item_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PYMSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prior Year Month Demand Schedule record,  used to get other values from PYM via Formula fields</description>
        <inlineHelpText>Prior Year Month Demand Schedule Lookup</inlineHelpText>
        <label>Prior Year Month Demand Schedule</label>
        <referenceTo>DemandItemSchedule__c</referenceTo>
        <relationshipLabel>Demand Item Schedule</relationshipLabel>
        <relationshipName>PriorYRSignal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QtyActual__c</fullName>
        <description>Actual quantity of a given material (demand item) for the given month, this typically lags at least a month so it’s often updated after the current month</description>
        <inlineHelpText>Actual quantity of a given material (demand item) for the given month.</inlineHelpText>
        <label>Actual Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyFcst0__c</fullName>
        <label>Forecast Qty Snapshot for current Month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyFcst1__c</fullName>
        <description>Forecast Qty Snapshot - 1 Months ago</description>
        <label>Forecast Qty Snapshot - 1 Months ago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyFcst2__c</fullName>
        <description>Forecast Qty Snapshot - 2 Months ago</description>
        <inlineHelpText>Forecast Qty Snapshot - 2 Months ago</inlineHelpText>
        <label>Forecast Qty Snapshot - 2 Months ago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QtyGoal__c</fullName>
        <description>This is the predefined quantity goal for the month, this is defined one year in advance for the year</description>
        <inlineHelpText>This is the predefined quantity goal for the month, this is defined one year in advance for the year</inlineHelpText>
        <label>Quantity Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevActual__c</fullName>
        <description>Actual revenue of a given material (demand item) for the given month, this typically lags at least a month so it’s often updated after the current month.</description>
        <inlineHelpText>Actual revenue of a given material (demand item) for the given month</inlineHelpText>
        <label>Actual Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevFcst0__c</fullName>
        <label>Forecast Rev Snapshot for current Month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevFcst1__c</fullName>
        <label>Forecast Rev Snapshot  - 1 Months ago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevFcst2__c</fullName>
        <label>Forecast Rev Snapshot - 2 Months ago</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevGoal__c</fullName>
        <description>Predefined revenue goal for the month, this is defined one year in advance for the year</description>
        <inlineHelpText>Predefined revenue goal for the month, this is defined one year in advance for the year</inlineHelpText>
        <label>Revenue Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fQtyPYMActual__c</fullName>
        <description>Reference to actual quantity from 1 year earlier</description>
        <formula>PYMSchedule__r.QtyActual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to actual quantity from 1 year earlier</inlineHelpText>
        <label>Prior YR/Month Actual Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fRevPYMActual__c</fullName>
        <description>Reference to actual revenue from 1 year earlier</description>
        <formula>PYMSchedule__r.RevActual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to actual revenue from 1 year earlier</inlineHelpText>
        <label>Prior YR/Month Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Demand Item Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demand Item Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>